[workspace]
resolver = "2"

members = [
    "tests",
    "common/blst",
    "common/secp256k1",
    "common/types",
    "common/util",
    "contracts/ckb-smt",
    "contracts/checkpoint",
    "contracts/metadata",
    "contracts/selection",
    "contracts/stake",
    "contracts/stake-smt",
    "contracts/delegate",
    "contracts/delegate-smt",
    "contracts/requirement",
    "contracts/reward",
    "contracts/withdraw",
]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
