[package]
name = "tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
blst = "0.3.4"
ckb-system-scripts = "0.5"
ckb-testtool = "0.9"
hex = "0.4.3"
keccak-hash = "0.10"
molecule = "0.7"
rand = "0.8.4"
rlp = "0.5.1"
