[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.9"
molecule = "0.7"
ckb-system-scripts = "0.5"
blst = "0.3.4"
rand = "0.8.4"
rlp = "0.5.1"
keccak-hash = "0.10"
bit-vec = "0.6.3"
hex = "0.4.3"
axon-types = { path = "../common/types" }
util = { path = "../common/util" }
# secp256k1 = { path = "../common/secp256k1" }
sparse-merkle-tree = { version = "0.6.1", default-features = false }
blake2b-rs = "0.2.0"