[package]
name = "checkpoint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
protocol = { path = "../common/protocol" }
blst = { path = "../common/blst" }
util = { path = "../common/util" }
rlp = { version = "0.5.1", default-features = false }
keccak-hash = { version = "0.8.0", default-features = false }
bit-vec = { version = "0.6.3", default-features = false }
