[package]
name = "checkpoint"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6.3", default-features = false }
blst = { path = "../common/blst" }
ckb-std = "0.10.0"
keccak-hash = { version = "0.8.0", default-features = false }
protocol = { path = "../common/protocol" }
rlp = { version = "0.5.1", default-features = false }
util = { path = "../common/util" }
