[package]
name = "crosschain-lock"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { path = "../common/blst" }
ckb-std = "0.10.0"
protocol = { path = "../common/protocol" }
util = { path = "../common/util" }
