[package]
name = "crosschain-metadata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
protocol = { path = "../common/protocol" }
secp256k1 = { path = "../common/secp256k1" }
util = { path = "../common/util" }
