[package]
name = "stake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.13"
# secp256k1 = { path = "../../common/secp256k1" }
# secp256k1 = "0.27.0"
# ckb-lib-secp256k1 = { path = "../../common/ckb-lib-secp256k1" }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
axon-types = { path = "../../common/types" }
util = { path = "../../common/util" }
# ckb-smt = { path = "../ckb-smt", default-features = false }
sparse-merkle-tree = { version = "0.6.1", default-features = false }  
secp256k1-utils = { path = "../../common/secp256k1-utils" }
sha3 = { version = "0.9", default-features = false }
