[package]
name = "util"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = { version = "0.3", default-features = false }
ckb-std = "0.10.0"
hex = { version = "0.4.3", default-features = false }
protocol = { path = "../protocol" }
